fixed issue with overflow

--- a/myRep/src/stylesheets/Home.css
+++ b/myRep/src/stylesheets/Home.css
@@ -5,6 +5,10 @@
     font-family: Poppins;
 }
 
+#root{
+    width: 100vw;
+}
+
 a{
     color: black;
 }
@@ -14,6 +18,7 @@ a{
    display: flex;
     background-color: rgb(234, 232, 241);
     align-items: center;
+    max-width: 100vw;
 }
 
 .sidebar{
@@ -54,7 +59,7 @@ a{
     padding: 1.5rem 1rem ;
     margin-left: 1rem;
     font-weight: 400;
-    border-radius: 20px 0 0 5px;
+    border-radius: 20px 0px 0px 20px;
     cursor: pointer;
 }
 
@@ -74,7 +79,6 @@ a{
 .date-container{
     display: flex;
     margin-top: 1rem;
-    margin-right: 2rem;
 }
 
 .main-bar-container{
